--- a/.editorconfig
+++ b/.editorconfig
@@ -6,3 +6,11 @@ indent_size = 2
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[component.js]
+# Space indentation to match Storybook code preview
+indent_style = space
+indent_size = 2
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
