--- a/package.json
+++ b/package.json
@@ -4,26 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-		"dev": "start-storybook -p 2600",
-		"test-eslint": "npx eslint .",
-		"test-prettier": "npx prettier --check .",
-		"test-all": "npm run test-eslint && npm run test-prettier",
-		"fix-eslint": "npx eslint . --fix",
-		"fix-prettier": "npx prettier --write .",
-		"fix-all": "npm run fix-eslint && npm run fix-prettier",
-		"build-storybook": "build-storybook",
-		"build": "npm run fix-eslint && npm run fix-prettier && npm run build-storybook"
+    "dev": "start-storybook -p 2600",
+    "test-eslint": "npx eslint .",
+    "test-prettier": "npx prettier --check .",
+    "test-all": "npm run test-eslint && npm run test-prettier",
+    "fix-eslint": "npx eslint . --fix",
+    "fix-prettier": "npx prettier --write .",
+    "fix-all": "npm run fix-eslint && npm run fix-prettier",
+    "build-storybook": "build-storybook",
+    "build": "npm run fix-eslint && npm run fix-prettier && npm run build-storybook"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pollen-digital/design-system--act.git"
   },
   "keywords": [],
-	"author": {
-		"name": "Tom Milburn",
-		"email": "tom@pollen.com.au",
-		"url": "https://pollen.com.au"
-	},
+  "author": {
+    "name": "Tom Milburn",
+    "email": "tom@pollen.com.au",
+    "url": "https://pollen.com.au"
+  },
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/pollen-digital/design-system--act/issues"
@@ -47,6 +47,7 @@
     "prettier": "2.7.1"
   },
   "dependencies": {
+    "@storybook/theming": "^6.5.12",
     "storybook-addon-sass-postcss": "^0.1.3"
   }
 }
