--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
   },
   "dependencies": {
     "@etchteam/storybook-addon-status": "^4.2.2",
+    "@storybook/addon-a11y": "^6.5.13",
     "@storybook/theming": "^6.5.12",
+    "@whitespace/storybook-addon-html": "^5.0.0",
     "storybook-addon-sass-postcss": "^0.1.3"
   }
 }
