--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+	"author": {
+		"name": "Tom Milburn",
+		"email": "tom@pollen.com.au",
+		"url": "https://pollen.com.au"
+	},
   "name": "design-system--act",
   "version": "1.0.0",
   "description": "",
@@ -19,11 +24,6 @@
     "url": "git+https://github.com/pollen-digital/design-system--act.git"
   },
   "keywords": [],
-  "author": {
-    "name": "Tom Milburn",
-    "email": "tom@pollen.com.au",
-    "url": "https://pollen.com.au"
-  },
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/pollen-digital/design-system--act/issues"
@@ -51,6 +51,8 @@
     "@storybook/addon-a11y": "^6.5.13",
     "@storybook/theming": "^6.5.12",
     "@whitespace/storybook-addon-html": "^5.0.0",
-    "storybook-addon-sass-postcss": "^0.1.3"
+    "storybook-addon-html-validator": "^0.0.12",
+    "storybook-addon-sass-postcss": "^0.1.3",
+    "storybook-mobile": "^1.0.0"
   }
 }
