--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -1,24 +1,23 @@
-name: Build and Deploy
+name: Storybook
 on:
 	push:
-		paths: ["src/**", ".storybook/**"]
+		branches:
+			- main # if any push happens on branch `main`, run this workflow. You could also add `paths` to detect changes in specific folder
+
 jobs:
 	build-and-deploy:
 		runs-on: ubuntu-latest
 		steps:
-			- name: Checkout 🛎️
+			- name: Checkout
 				uses: actions/checkout@v2.3.1
-				with:
-					persist-credentials: false
-			- name: Install and Build 🔧
+
+			- name: Install and Build
 				run: |
-					npm install
+					npm ci
 					npm run build-storybook
-			- name: Deploy 🚀
+
+			- name: Deploy
 				uses: JamesIves/github-pages-deploy-action@3.6.2
 				with:
-					GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-					BRANCH: main
-					FOLDER: docs-build
-					CLEAN: true
-					TARGET_FOLDER: docs
+					branch: gh-pages
+					folder: storybook-static # output folder from `npm run build-storybook`
